@@ -12,7 +12,9 @@ plaatje
 <h2>The name is Pond...<br>LilyPond</h2>
 
 <p>
-LilyPond formats sheet music beautifully and automatically. You can use it for
+Computer printouts of sheet music usually look dull.  LilyPond is
+different: it produces gorgeous sheet music, all automatically.
+ Use it for
 your music too!
 
 <p align=right><a href=switch/>Find out more about LilyPond...</a></p>
@@ -27,12 +29,11 @@ plaatje
   <!A modern program for traditional looks>
 <p>
 
-Computer printouts of sheet music usually look dull.  LilyPond is
-different: its output looks gorgeous. Why did we revive the esthetics
-of traditionally engraved music? How did we do it?
+What sets LilyPond apart from other programs?  Why did we revive the
+esthetics of traditionally engraved music? How did we do it?
 
 
-<p align=right>read the answer <a
+<p align=right>find the answers <a
 href=background/>here...</a></p> </td>
 </tr><tr>
 <td width="50%">
