@@ -3,7 +3,7 @@
 
 LilyPond is a different way of printing music. Find out what makes it
 so good.
-g
+<p>
 <img src="@IMAGES@lilypond-book.png" align=right>
 
 <h2>Text-based input</h2>
